--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,9 @@
     "titleBar.activeBackground": "#0755a7",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#0755a799",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.debuggingBackground": "#a75907",
+    "statusBar.debuggingForeground": "#e7e7e7"
   },
   "peacock.color": "#0755a7"
 }
